Fix some overflows.

--- a/app/assets/stylesheets/layout/_issue.css.scss
+++ b/app/assets/stylesheets/layout/_issue.css.scss
@@ -1,6 +1,5 @@
 .issue > * {
-  overflow: auto;
-  // + * { @include spacing(margin-top); }
+  @include clearfix;
 }
 
 .issue-illo {
