--- a/app/assets/stylesheets/template/_masthead.css.scss
+++ b/app/assets/stylesheets/template/_masthead.css.scss
@@ -93,8 +93,7 @@
 }
 
 .masthead__nav__items {
-  overflow-x: scroll;
-  overflow-y: hidden;
+  overflow: hidden;
   white-space: nowrap;
   -webkit-overflow-scrolling: touch;
 }
